[package]
authors = ["USAGI.NETWORK / Usagi Ito <the@usagi.network>"]
categories = ["data-structures"]
description = "A dimension shiftable buffer"
edition = "2018"
keywords = ["dimension", "shiftable", "buffer", "valarray", "slice", "multi-dimensional"]
name = "dimension_shiftable_buffer"
version = "1.0.0"

[features]
csv = [] # + Csv trait feature; ::from_csv(), .to_csv(), .to_csv_dimensional
default = ["csv"]

[dependencies]
thiserror = "1.0.20"
